# brontes-classifier

./: Cargo.toml
classifier-core/: Cargo.toml
classifier-core/src/: action.rs  context.rs  lib.rs  types.rs
classifier-macros/: Cargo.toml
classifier-macros/src/: lib.rs
classifier-macros/src/action_classifier/: action_dispatch.rs  action_impl.rs  call_data.rs  closure_dispatch.rs  data_preparation.rs  logs.rs  return_data.rs
examples/uniswap-swaps/: Cargo.toml
examples/uniswap-swaps/src/: lib.rs  main.rs  tracer.rs  types.rs
examples/uniswap-swaps/src/abis/: mod.rs
examples/uniswap-swaps/src/classifier/: mod.rs  uniswap_v2.rs  uniswap_v3.rs
examples/uniswap-swaps/src/classifier/abis/: mod.rs
examples/uniswap-swaps/src/classifier/uniswap/: mod.rs  uniswap_v2.rs
