[package]
name = "brontes-classifier"
version = "0.1.0"
edition = "2024"


[dependencies]

# classifier
brontes-classifier-macros.workspace = true
brontes-tracer.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true


# misc
eyre.workspace = true
